--- a/HTML/Page Login/style_login.css
+++ b/HTML/Page Login/style_login.css
@@ -97,3 +97,22 @@ max-width: 400px; /* Adjust as needed */
   position: absolute;
   font-family: 'Poppins', sans-serif;
 }
+
+.wrapper {
+
+  /* adjust padding and margin as needed */
+  padding-bottom: 50px;
+}
+
+footer {
+  height: 50px; /* adjust height as needed */
+  background-color: #2B414F; /* adjust color as needed */
+  font-family: 'Glacial Indifference';
+  color: white;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+}
