--- a/HTML/Menu Recolteur/menuRecolteur.css
+++ b/HTML/Menu Recolteur/menuRecolteur.css
@@ -6,6 +6,7 @@ body
   margin:0;
   background-color:#ede8ec;
   font-family: 'Glacial Indifference';
+  font-size: 20;
 }
 
 #page
@@ -37,7 +38,7 @@ body
 .logo-container
 {
   margin-top: 30px;
-  width: 50%;
+  width: 60%;
 
 }
 
