--- a/HTML/Menu Gestionnaire/home_page_gestionnaire.css
+++ b/HTML/Menu Gestionnaire/home_page_gestionnaire.css
@@ -2,14 +2,13 @@
 @import url('https://fonts.cdnfonts.com/css/glacial-indifference-2');
 * {
   margin: 0;
-  ;
 }
 
 .menu {
   width: 18%;
   background-color: #2B414F;
   color: #fff;
-  height: 130vh
+  height: 1000px;
 }
 
 .body_page {
@@ -17,7 +16,7 @@
   background-color: #EDE8EC;
   display: flex;
   flex-direction: column; /* new */
-  height: 130vh
+  height: 1000px;
 }
 
 .home_message_top {
@@ -38,30 +37,111 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 1; /* make .home_box_message appear on top of .home_message_top */
+  display: flex; /* add flex display */
+  flex-direction: column;
+   /* make .home_box_message appear on top of .home_message_top */
 }
-
-.home_box_message.alert_message {
-  flex: 1;
-  height: 100px;
-  background-color: #fff;
-  margin-top: 20px;
-}
-
-.home_box_message.buttons {
-  height: 100px;
-  background-color: #EDE8EC;
-  margin-top: 20px;
-  flex: 0 0 100px;
+.message_content {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start; /* align items to the top */
+  flex-direction: column;
+  text-align: left; /* align text to left */
 }
 
-.home_button_bot {
-  height: 40%; /* new */
-  /* add any other styles you need */
+.message_content .top,
+.message_content .bot {
+  width : 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start; /* align buttons to right */
 }
+.message_content .left {
+  margin-right: 10px;
+}
+.message_content a,
+.message_content p {
+  display: inline-block;
+  margin: 0;
+}
+.message_content .icon {
+  width: 20px;
+  height: 20px;
+}
+.message_content button {
+  height: 45px;
+  border : none;
+  border-radius: 20px;
+  padding: 10px 20px;
+  background-color: #33658A;
+  color: #fff;
+  cursor: pointer;
+  font-family: 'Poppins', sans-serif;
+}
+
+
+
+.home_button_bot {
+  height: 40%;
+  width: 100%;
+  background-color: #EDE8EC;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+  margin : 0px;
+}
+
+
+.box-container {
+  width : 30%;
+  position: relative;
+  display : flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+.box {
+	background-color: #F6AE2D;;
+	box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
+	border-radius: 30px;
+	padding: 20px;
+	width: 60%;
+	height: 30%;
+	float: left;
+  display : flex;
+  justify-content: space-between; /* position the button at the bottom */
+  margin: 10% auto; /* add a margin to the left and right of the box */
+}
+
+.box img {
+	max-width: 100%;
+	height: 100%;
+	display: block;
+  margin: 0 auto;
+}
+
+.button-link {
+  display: inline-block;
+  border-radius: 30px;
+  background-color: #33658A;
+  color: #fff;
+  text-decoration: none;
+  font-family: 'Poppins', sans-serif;
+}
+
+.button-link:hover {
+  background-color: #3E8EDE;
+}
+
+#button_bot {
+  width : 60%;
+  padding: 5% 10%;
+}
+#button_top {
+  width : 10%;
+  padding: 1% 8%;
+}
+
 
 
 
