nav bar wip and componnents accueiln connexion et listeruche

--- a/LaRucheFront/src/app/navbar/navbar.component.html
+++ b/LaRucheFront/src/app/navbar/navbar.component.html
@@ -1,1 +1,96 @@
-<p>navbar works!</p>
+<!-- <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="menus.css">
+  
+  </head>
+  
+  <meta charset="utf-8"> -->
+  <body>
+  <main>
+    <div id="page">
+  
+  
+      <div id="menu-container">
+  
+  
+          <div class="logo-container">
+            <img id="logo" src="assets/navbar/logo-ss.png" alt="logo">
+          </div>
+  
+  
+  <div id="menu">
+          <p>Bienvenue Gestionnaire</p><br><br>
+          <nav>
+  
+  
+            <ul>
+  
+              <li class="linkAccueil">
+                <img src="" alt="logo" class="iconesMenu">
+                <a href="#" class="alignIconeWithText">Accueil</a>
+              </li>
+  
+              <li class="linkCompte">
+                <img src="" alt="logo" class="iconesMenu">
+                <a href="#" class="alignIconeWithText">Mon compte</a>
+              </li>
+  
+  
+  
+              <li class="linkRuche">
+                <ul class="accordion">
+                  <li class="has-sub">
+                    <img src="" alt="logo" class="iconesMenu">
+                    <label for="menu1" class="alignIconeWithText">Mes ruches &#x25BE;</label>
+                    <input id="menu1" type="checkbox" />
+                    <ul class="sub">
+                      <li class="sousMenus"><a href="#">Afficher les ruches</a></li>
+                      <li class="sousMenus"><a href="#">Évaluer le nourrissage</a></li>
+                      <li class="sousMenus"><a href="#">Évaluer les populations</a></li>
+                    </ul>
+                  </li>
+                </ul>
+  
+              </li>
+  
+  
+              <li class="linkRecoltes">
+                <img src="" alt="logo" class="iconesMenu">
+                <a href="#" class="alignIconeWithText">Les récoltes</a>
+              </li>
+  
+  
+              <li class="linkUtilisateurs">
+  
+                <ul class="accordion">
+  
+                  <li class="has-sub">
+                    <img src="" alt="logo" class="iconesMenu">
+                    <label for="menu2" class="alignIconeWithText">Gestion des utilisateurs &#x25BE;</label>
+                    <input id="menu2" type="checkbox" />
+                    <ul class="sub">
+                      <li class="sousMenus"><a href="#">Récolteurs</a></li>
+                      <li class="sousMenus"><a href="#">Clients</a></li>
+                    </ul>
+                    </li>
+                  </ul>
+                </li>
+  
+                <li class="linkDeco">
+                  <img src="" alt="logo" class="iconesMenu">
+                  <a href="#" class="alignIconeWithText">Déconnexion</a>
+                </li>
+  
+              </ul>
+            </nav>
+  
+          </div>
+        </div>
+  
+        <div id="accueil"></div>
+  
+      </div>
+  
+    </main>
+</body>
+  
