essais images navbar (les hovers fonctionnent pas

--- a/LaRucheFront/src/app/navbar/navbar.component.html
+++ b/LaRucheFront/src/app/navbar/navbar.component.html
@@ -26,12 +26,12 @@
             <ul>
   
               <li class="linkAccueil">
-                <img src="" alt="logo" class="iconesMenu">
+                <img src="assets/navbar/home-b.png" alt="logo" class="iconesMenu">
                 <a href="#" class="alignIconeWithText">Accueil</a>
               </li>
   
               <li class="linkCompte">
-                <img src="" alt="logo" class="iconesMenu">
+                <img src="assets/navbar/compte-b.png" alt="logo" class="iconesMenu">
                 <a href="#" class="alignIconeWithText">Mon compte</a>
               </li>
   
@@ -40,7 +40,7 @@
               <li class="linkRuche">
                 <ul class="accordion">
                   <li class="has-sub">
-                    <img src="" alt="logo" class="iconesMenu">
+                    <img src="assets/navbar/ruche-b.png" alt="logo" class="iconesMenu">
                     <label for="menu1" class="alignIconeWithText">Mes ruches &#x25BE;</label>
                     <input id="menu1" type="checkbox" />
                     <ul class="sub">
@@ -55,7 +55,7 @@
   
   
               <li class="linkRecoltes">
-                <img src="" alt="logo" class="iconesMenu">
+                <img src="assets/navbar/miel-b.png" alt="logo" class="iconesMenu">
                 <a href="#" class="alignIconeWithText">Les récoltes</a>
               </li>
   
@@ -65,7 +65,7 @@
                 <ul class="accordion">
   
                   <li class="has-sub">
-                    <img src="" alt="logo" class="iconesMenu">
+                    <img src="assets/navbar/api-b.png" alt="logo" class="iconesMenu">
                     <label for="menu2" class="alignIconeWithText">Gestion des utilisateurs &#x25BE;</label>
                     <input id="menu2" type="checkbox" />
                     <ul class="sub">
@@ -77,7 +77,7 @@
                 </li>
   
                 <li class="linkDeco">
-                  <img src="" alt="logo" class="iconesMenu">
+                  <img src="assets/navbar/bee-b.png" alt="logo" class="iconesMenu">
                   <a href="#" class="alignIconeWithText">Déconnexion</a>
                 </li>
   
