routes mais ça marche pas

--- a/LaRucheFront/src/app/Ruches/ruche-detail/ruche-detail.component.html
+++ b/LaRucheFront/src/app/Ruches/ruche-detail/ruche-detail.component.html
@@ -42,7 +42,7 @@
             
             
 
-            <input type="button" class ="btn1" value="Annuler">
+            <input type="button" class ="btn1" value="Annuler" (click)="goToListRuche()">
             <input type="button" class ="btn2" type="submit" value="Sauvegarder" [disabled]="rucheForm.invalid" >
             
             
