--- a/LaRucheFront/src/app/navbar/navbar.component.html
+++ b/LaRucheFront/src/app/navbar/navbar.component.html
@@ -40,6 +40,8 @@
                   <li class="has-sub">
                     <img src="assets/navbar/ruche-b.png" alt="logo" class="iconesMenu">
                     <label for="menu1" class="alignIconeWithText">Mes ruches &#x25BE;</label>
+                    <a [routerLink]="['/ruche/ma-ruche']" routerLinkActive="active">Add/mod</a>
+
                     <input id="menu1" type="checkbox" />
                     <ul class="sub">
                       <li class="sousMenus"><a href="#">Afficher les ruches</a></li>
