--- a/LaRucheFront/src/app/navbar/navbar.component.html
+++ b/LaRucheFront/src/app/navbar/navbar.component.html
@@ -45,7 +45,7 @@
                     <img src="assets/navbar/ruche-b.png" alt="logo" class="iconesMenu" *ngIf="sourisC==false">
                     <img src="assets/navbar/ruche-o.png" alt="logo" class="iconesMenu" *ngIf="sourisC==true">
                     <label for="menu1" class="alignIconeWithText">Mes ruches &#x25BE;</label>
-                    <a [routerLink]="['/ruche/ma-ruche']" routerLinkActive="active">Add/mod</a>
+                    <a [routerLink]="['gestionnaire/ruche/ma-ruche']" routerLinkActive="active">Add/mod</a>
 
                     <input id="menu1" type="checkbox" />
                     <ul class="sub">
