--- a/LaRucheFront/src/app/navbar/navbar.component.scss
+++ b/LaRucheFront/src/app/navbar/navbar.component.scss
@@ -1,5 +1,5 @@
-@import url('https://fonts.cdnfonts.com/css/glacial-indifference-2');
-@import url('https://fonts.google.com/specimen/Poppins');
+/*@import url('https://fonts.cdnfonts.com/css/glacial-indifference-2');
+@import url('https://fonts.google.com/specimen/Poppins');*/
 
 body
 {
