--- a/LaRucheFront/src/app/Ruches/liste-ruches/liste-ruches.component.html
+++ b/LaRucheFront/src/app/Ruches/liste-ruches/liste-ruches.component.html
@@ -1,1 +1,61 @@
-<p>liste-ruches works!</p>
+<html>
+<head>
+  <title>Liste Recolteurs Gestionnaire</title>
+</head>
+<body>
+  <div class="menu" style="float: left">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+  <div class="wrapper">
+    <div class="RightBlock">
+      <div id="tableau-container">
+        <h1>Mes récolteurs</h1>
+        <hr size="2" color=#f6ae2d width="100%"><br>
+        <table>
+          <thead>
+            <tr>
+              <th>Récolteur id</th>
+              <th>Login</th>
+              <th>Password</th>
+              <th>Ruche id</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFort="let recolteur of listeR()">
+              <td>{{recolteur.id}}</td>
+              <td>{{recolteur.login}}</td>
+              <td>test</td>
+              <td>Ruche 1</td>
+              <td>
+                <button class="edit-btn">Modifier</button>
+                <button class="delete-btn">Supprimer</button>
+              </td>
+            </tr>
+            <tr>
+              <td>Récolteur 2</td>
+              <td>recolteurr</td>
+              <td>recolteurr</td>
+              <td>Ruche 2 / Ruche 4</td>
+              <td>
+                <button class="edit-btn">Modifier</button>
+                <button class="delete-btn">Supprimer</button>
+              </td>
+            </tr>
+            <tr>
+              <td>Récolteur 6</td>
+              <td>rec2</td>
+              <td>rec2</td>
+              <td></td>
+              <td>
+                <button class="edit-btn">Modifier</button>
+                <button class="delete-btn">Supprimer</button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+          <button class="add-btn">Ajouter un récolteur</button>
+      </div>
+    </div>
+  </div>
+</body>
+</html>
+
