--- a/LaRucheFront/src/app/connexion/connexion.component.html
+++ b/LaRucheFront/src/app/connexion/connexion.component.html
@@ -1,1 +1,23 @@
-<p>connexion works!</p>
+<html>
+<head>
+	<title>Connexion</title>
+</head>
+<body>
+	<div class="wrapper">
+	<div class="imageLeft"></div>
+	<div class="RightBlock">
+		<img src='assets/navbar/logo-ss.png' alt="Image Description">
+    <div class="login-form">
+  			<form action="#" method="post" form [formGroup]="loginForm" (ngSubmit)="seConnecter()">
+  				<label for="username">Login:</label>
+  				<input type="text" name="username" id="username" formControlName="login"><br>
+  				<label for="password">Mot de Passe :</label>
+  				<input type="password" name="password" id="password" formControlName="password"><br>
+  				<input type="submit" value="Se Connecter" [disabled]="loginForm.invalid"><br>
+            <a href="">Mot de passe oublié ?</a>
+  			</form>
+  		</div>
+    </div>
+</div>
+</body>
+</html>
