--- a/LaRucheFront/src/app/accueil/accueil.component.html
+++ b/LaRucheFront/src/app/accueil/accueil.component.html
@@ -1,1 +1,65 @@
-<p>accueil works!</p>
+<html>
+<body>
+	<main>
+<div class="body_page">
+
+		<div class="home_message_top">
+
+		<div class="home_box_message">
+			<h2>Bienvenue sur votre application un-bee-livable !</h2>
+							<div class="message_content">
+								<div class="top">
+									<div class="left">
+										<p><img src="/assets/home_gestionnaire/icone-danger.png" class="icon">Vous avez 2 vulnérabilités en cours</p>
+									</div>
+									<div class="right">
+											<button routerLink="gestionnaire/ruche/vulnerabilite">Voir mes vulnérabilités</button>
+									</div>
+								</div>
+								<div class="bot">
+									<div class="left">
+										<p>Toutes vos ruches sont nourries</p>
+									</div>
+									<div class="right">
+										<button routerLink="gestionnaire/ruche/ma-ruche">Voir mes ruches</button>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
+
+
+	<div class="home_button_bot">
+
+
+		<div class="box-container">
+			<a routerLink="gestionnaire/ruche/ma-ruche"  class="img_box">
+  			<img src="/assets/home_gestionnaire/miel-b.png">
+			</a>
+			<button routerLink="gestionnaire/ruche/ma-ruche" id ="button_bot">Voir mes ruches</button>
+		</div>
+
+		<div class="box-container">
+				<a routerLink="gestionnaire/ruche/ma-production" class="img_box">
+				<img src="/assets/home_gestionnaire/hive-b.png">
+			</a>
+			<button routerLink="gestionnaire/ruche/ma-production" id ="button_bot">Voir mes productions</button>
+
+		</div>
+
+		<div class="box-container">
+			<a routerLink="gestionnaire/ruche/users" class="img_box">
+
+				<img src="/assets/home_gestionnaire/apiculteur-b.png">
+			</a>
+			<button routerLink="gestionnaire/ruche/users" id ="button_bot">Gérer les utilisateurs</button>
+		</div>
+
+
+	</div>
+
+</div>
+</main>
+</body>
+</html>
