--- a/LaRucheFront/src/app/navbar/navbar.component.html
+++ b/LaRucheFront/src/app/navbar/navbar.component.html
@@ -45,11 +45,9 @@
                     <img src="assets/navbar/ruche-b.png" alt="logo" class="iconesMenu" *ngIf="sourisC==false">
                     <img src="assets/navbar/ruche-o.png" alt="logo" class="iconesMenu" *ngIf="sourisC==true">
                     <label for="menu1" class="alignIconeWithText">Mes ruches &#x25BE;</label>
-                    <a [routerLink]="['gestionnaire/ruche/ma-ruche']" routerLinkActive="active">Add/mod</a>
-
                     <input id="menu1" type="checkbox" />
                     <ul class="sub">
-                      <li class="sousMenus"><a href="#">Afficher les ruches</a></li>
+                      <li class="sousMenus"><a [routerLink]="['gestionnaire/ruche']" routerLinkActive="active">Afficher les ruches</a></li>
                       <li class="sousMenus"><a href="#">Évaluer le nourrissage</a></li>
                       <li class="sousMenus"><a href="#">Évaluer les populations</a></li>
                     </ul>
