--- a/LaRucheFront/src/app/Ruches/liste-ruches/liste-ruches.component.html
+++ b/LaRucheFront/src/app/Ruches/liste-ruches/liste-ruches.component.html
@@ -3,7 +3,7 @@
   <title>Liste Ruches Gestionnaire</title>
 </head>
 <body>
-  <div class="menu" style="float: left">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum quo natus odio vero, necessitatibus quibusdam. Ducimus architecto odio saepe, eius mollitia beatae minus provident aspernatur quis nemo officiis, similique voluptatem.</div>
+  <div class="menu" style="float: left"></div>
   <div class="wrapper">
     <div class="RightBlock">
       <div id="tableau-container">
