--- a/LaRucheFront/src/app/Ruches/liste-ruches/liste-ruches.component.scss
+++ b/LaRucheFront/src/app/Ruches/liste-ruches/liste-ruches.component.scss
@@ -37,7 +37,7 @@ h1{
   align-items: center;
   justify-content: center;
   height: 100vh;
-  padding-bottom: 50px;
+ // padding-bottom: 50px;
 }
 
 table {
