--- a/LaRucheFront/src/app/footer/footer.component.html
+++ b/LaRucheFront/src/app/footer/footer.component.html
@@ -14,7 +14,7 @@
 
   </div>
 
-  <footer>&copy; AJC Ingénierie - LaRuche | Sopra Steria 2023</footer>
+  <footer>&copy; AJC Ingénierie - Un-bee-lievable | Sopra Steria 2023</footer>
 
 
 
