Commentaire pour compiler

--- a/LaRucheFront/src/app/accueil/accueil.component.html
+++ b/LaRucheFront/src/app/accueil/accueil.component.html
@@ -12,14 +12,14 @@
 									<div class="left">
 										<p><img src="/assets/home_gestionnaire/icone-danger.png" class="icon">Vous avez 2 vulnérabilités en cours</p>
 									</div>
-									<div class="left">
+<!-- 									<div class="left">
 										<ng-container *ngIf="vulnerabilite > 0; else noVulnerabilite">
 										  <p><img src="/assets/home_gestionnaire/icone-danger.png" class="icon">Vous avez {{vulnerabilite}} vulnérabilités en cours</p>
 										</ng-container>
 										<ng-template #noVulnerabilite>
 										  <p>Aucune vulnérabilité</p>
 										</ng-template>
-									</div>
+									</div> -->
 
 
 									<div class="right">
@@ -31,14 +31,14 @@
 										<p>Toutes vos ruches sont nourries</p>
 									</div>
 
-									<div class="left">
+<!-- 									<div class="left">
 										<ng-container *ngIf="nourissage > 0; else noNourissage">
 										  <p><img src="/assets/home_gestionnaire/icone-danger.png" class="icon">Vous avez {{nourissage}} ruches à nourrir</p>
 										</ng-container>
 										<ng-template #noNourissage>
 										  <p>Toutes vos ruches sont nourries</p>
 										</ng-template>
-									</div>
+									</div> -->
 
 									<div class="right">
 										<button routerLink="gestionnaire/ruche/ma-ruche">Voir mes ruches</button>
